ädd register user endpoint
